# ya_profi_pi_task2_2024

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
app/: main.py  settings.py
app/api/: router.py
app/api/routers/ya_profi/: ya_profi_router.py
app/service/host_manager/: host_manager.py  shemas.py
app/service/integration/host_creator/: host_creator.py
