[tool.poetry]
name = "ya-profi-pi-task2-2024"
version = "0.1.0"
description = ""
authors = ["roman.kuzmin <roman.kuzmin@sheverev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
